# nvs

./: .gitignore  .travis.yml  README.md  default.nix  nix-cve.cabal  nix-cve.nix  nvs.cabal  nvs.nix  shell.nix  wrapper.nix
.github/workflows/: build.yml  niv-updater.yml
app/: Main.hs
data/: aliases.yaml  excludes.yaml  vuln-excludes.yaml
nix/: sources.json
patches/: ede-0.2.9-ghc882.patch  trifecta-2-ghc882.patch
src/Distribution/: Maintainers.hs  Package.hs
src/Distribution/Nixpkgs/: Packages.hs
src/Nix/: Cve.hs
src/Nix/Cve/: Cli.hs  Report.hs
src/Nix/Cve/Cli/: Opts.hs
src/Nix/Cve/Report/: Template.hs
src/Nixpkgs/: Maintainers.hs  Packages.hs
src/Nixpkgs/Cve/: Cli.hs  Report.hs
src/Nixpkgs/Cve/Cli/: Opts.hs
src/Nixpkgs/Cve/Report/: Template.hs
src/Nixpkgs/Vuln/: Cli.hs  Excludes.hs  Files.hs  Report.hs  Types.hs
src/Nixpkgs/Vuln/Cli/: Opts.hs
src/Nixpkgs/Vuln/Report/: Template.hs
src/Nvd/: Cpe.hs  Cve.hs
src/Nvd/Cpe/: Configuration.hs  Uri.hs
src/Nvd/Cve/: Types.hs
src/Nvs/: Cli.hs  Excludes.hs  Files.hs  Render.hs  Report.hs  Types.hs
src/Nvs/Cli/: Opts.hs
templates/: cves.ede
test/: CveSpec.hs  PackagesSpec.hs  generate-report
