name: nix-cve
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/nix-cve
author: Piotr Bogdan

library
    exposed-modules:
        Nvd.Cve
        Nix.Cve
        Distribution.Package
        Distribution.Maintainers
    build-depends:
        base >=4.9 && <4.10,
        aeson -any,
        attoparsec -any,
        protolude -any,
        bytestring -any,
        text -any,
        vector -any,
        unordered-containers -any,
        lucid -any,
        containers -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src
    ghc-options: -Wall

