name: nix-cve
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/nix-cve
author: Piotr Bogdan

library
    exposed-modules:
        Nvd.Cve
        Nix.Cve
        Distribution.Package
        Distribution.Maintainers
    build-depends:
        base >=4.9 && <4.10,
        aeson >=1.0.2 && <1.1,
        attoparsec >=0.13.1 && <0.14,
        bytestring >=0.10.8 && <0.11,
        containers >=0.5.7 && <0.6,
        text >=1.2.2 && <1.3,
        vector >=0.11.0 && <0.12,
        unordered-containers >=0.2.8 && <0.3,
        lucid >=2.9.8 && <2.10,
        protolude >=0.1.10 && <0.2
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src
    ghc-options: -Wall

