name: nvs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/nvs
author: Piotr Bogdan
data-files:
    templates/*.ede
    data/*.yaml

library
    exposed-modules:
        Nixpkgs.Maintainers
        Nixpkgs.Packages
        Nixpkgs.Packages.Aliases
        Nixpkgs.Packages.Types
        Nvs.Cli
        Nvs.Cli.Opts
        Nvs.Excludes
        Nvs.Files
        Nvs.Report
        Nvs.Types
        Nvd.Cve
        Nvd.Cve.Types
        Nvd.Cpe
        Nvd.Cpe.Configuration
        Nvd.Cpe.Uri
    build-depends:
        base >=4.9 && <4.10,
        aeson >=1.0.2 && <1.1,
        attoparsec >=0.13.1 && <0.14,
        bytestring >=0.10.8 && <0.11,
        containers >=0.5.7 && <0.6,
        text >=1.2.2 && <1.3,
        vector >=0.11.0 && <0.12,
        unordered-containers >=0.2.8 && <0.3,
        lucid >=2.9.8 && <2.10,
        protolude >=0.1.10 && <0.2,
        optparse-applicative >=0.13 && <0.14,
        shell-cmd >=0.2 && <0.3,
        temporary >=1.2 && <1.3,
        monad-logger >=0.3 && <0.4,
        raw-strings-qq >=1.1 && <1.2,
        aeson-casing >=0.1 && <0.2,
        ede >=0.2 && <0.3,
        yaml >=0.8 && <0.9,
        directory >=1.3 && <1.4,
        hashable >1.2 && <1.3,
        transformers >= 0.5 && < 0.6,
        versions >= 3.0
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src
    other-modules:
        Paths_nvs
    ghc-options: -Wall

executable nvs
    main-is: Main.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1.10 && <0.2,
        nvs -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: app
    ghc-options: -Wall -rtsopts

test-suite nvs-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec -any,
        nvs -any,
        protolude -any,
        QuickCheck -any,
        quickcheck-instances -any,
        unordered-containers -any,
        containers -any,
        text -any,
        vector -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: test
    other-modules:
        CveSpec
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
