name: nvs
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: ppbogdan@gmail.com
homepage: https://github.com/pbogdan/nvs
author: Piotr Bogdan
data-files:
    templates/*.ede
    data/*.yaml

library
    exposed-modules:
        Nixpkgs.Maintainers
        Nixpkgs.Packages
        Nixpkgs.Packages.Versions
        Nixpkgs.Packages.Types
        Nvs.Cli
        Nvs.Cli.Opts
        Nvs.Files
        Nvs.Report
        Nvs.Types
        Nvd.Cve
        Nvd.Cve.Types
        Nvd.Cpe
        Nvd.Cpe.Configuration
        Nvd.Cpe.Uri
    build-depends:
        base >=4.9,
        aeson >=1.0,
        async -any,
        bytestring >=0.10.8 && <0.11,
        containers >=0.5,
        text >=1.2.2 && <1.3,
        vector >=0.11,
        unordered-containers >=0.2.8 && <0.3,
        lucid >=2.9.8 && <2.10,
        protolude >=0.2,
        optparse-applicative >=0.13,
        shell-cmd >=0.2 && <0.3,
        temporary >=1.2,
        monad-logger >=0.3 && <0.4,
        aeson-casing >=0.1,
        ede >=0.2 && <0.3,
        yaml >=0.8,
        directory >=1.3 && <1.4,
        hashable >=1.2,
        transformers >= 0.5 && < 0.6,
        versions >= 3.0,
        streaming >= 0.1.4,
        streaming-bytestring >= 0.1.4,
        streaming-utils >= 0.1.4,
        json-stream >= 0.4.1,
        time -any,
        resourcet -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: src
    other-modules:
        Paths_nvs
    ghc-options: -Wall

executable nvs
    main-is: Main.hs
    build-depends:
        base >=4.9,
        protolude >= 0.2,
        nvs -any
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: app
    ghc-options: -Wall -threaded -rtsopts "-with-rtsopts=-N -A32M"

test-suite nvs-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        hspec -any,
        nvs -any,
        protolude -any,
        QuickCheck -any,
        quickcheck-instances -any,
        unordered-containers -any,
        containers -any,
        text -any,
        vector -any,
        aeson,
        aeson-qq
    default-language: Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    hs-source-dirs: test
    other-modules:
        PackagesSpec
    ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
