cabal-version: >=1.10
name:          nvs
version:       0.1.0.0
license:       BSD3
license-file:  LICENSE
maintainer:    ppbogdan@gmail.com
author:        Piotr Bogdan
homepage:      https://github.com/pbogdan/nvs
build-type:    Simple
data-files:    templates/*.ede

library
    exposed-modules:
        Nixpkgs.Packages
        Nixpkgs.Packages.Versions
        Nixpkgs.Packages.Types
        Nvs.Cli
        Nvs.Cli.Opts
        Nvs.Files
        Nvs.Report
        Nvd.Cve
        Nvd.Cve.Types
        Nvd.Cpe
        Nvd.Cpe.Configuration
        Nvd.Cpe.Uri

    hs-source-dirs:     src
    other-modules:      Paths_nvs
    default-language:   Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    ghc-options:        -Wall
    build-depends:
        base >=4.9,
        aeson >=1.0,
        aeson-casing >=0.1,
        async >= 2.2.2,
        attoparsec >= 0.13.2,
        bytestring >=0.10.8 && <0.11,
        containers >=0.5,
        directory >=1.3 && <1.4,
        ede >=0.2 && <0.3,
        hashable >=1.2,
        json-stream >=0.4.1,
        lucid >=2.9.8 && <2.10,
        monad-logger >=0.3 && <0.4,
        nix-derivation >=1.0.2,
        optparse-applicative >=0.13,
        protolude >=0.2,
        regex-applicative >=0.3.3,
        resourcet >=1.2.2,
        stm >=2.5.0,
        streaming >=0.1.4,
        streaming-bytestring >=0.1.4,
        streaming-utils >=0.1.4,
        system-filepath -any,
        text >=1.2.2 && <1.3,
        time >=1.9.3,
        transformers >=0.5 && <0.6,
        unordered-containers >=0.2.8 && <0.3,
        vector >=0.11,
        versions >=3.0,
        yaml >=0.8

executable nvs
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    ghc-options:        -Wall -threaded -rtsopts "-with-rtsopts=-N"
    build-depends:
        base >=4.9,
        protolude >=0.2,
        nvs -any

test-suite nvs-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    default-extensions: OverloadedStrings NoImplicitPrelude
    ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base -any,
        QuickCheck -any,
        aeson -any,
        aeson-qq -any,
        containers -any,
        hspec -any,
        nvs -any,
        protolude -any,
        quickcheck-instances -any,
        text -any,
        unordered-containers -any,
        vector -any
